css/main.css
html, body {
    display: inline;
    padding: 0;
    margin: 0;
    height: 100%;
    width: 100%;
    overflow: hidden;
    font-family: "Helvetica Neue",Helvetica,Arial, sans-serif;
    font-size: 1em;
    color: #333;
    -webkit-user-select: none; 
    -moz-user-select: none; 
    -ms-user-select: none;
}

.clearfix:after {
    visibility: hidden;
    display: block;
    content: "";
    clear: both;
    height: 0;
}
* html .clearfix { 
    zoom: 1; /* IE6 */
} 
*:first-child+html .clearfix{ 
    zoom: 1; /* IE7 */
} 

#container {
    display: -webkit-box;    
    -webkit-box-orient: horizontal;

    display: -moz-box;
    -moz-box-orient: horizontal;

    display: -ms-box;
    -ms-box-orient: horizontal;

    height: 100%;
    width: 100%;
}
#sidebar {
    overflow-y: scroll;
    overflow-x: hidden;
    width: 300px;
    border-right: 1px solid #ccc;
}

.input-append.customfile {
    width: 100%;
    white-space: normal;
}

.customfile.input-append .customfile-feedback {
    border-radius: 3px 0 0 3px;
    padding-left: 25px;
    width: 167px;
}
.add-on.customfile-button {
    width: 61px;
}
#inputContainer {
    height: 60px;
    width: 270px;
}

#progressBar {
    margin-top: 5px;
    height: .6em;
}

#errorMsg {
    color: #f00;
    font-size: 0.7em;
    margin: 5px 0 5px 0;
}
#errorMsg p {
    margin: 0;
    padding: 0;
}
#fileTree {
    padding: 0px 10px;
}

#viewer {
    width: 100%;
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -ms-box-flex: 1;
    overflow-y: scroll;
    overflow-x: hidden;
    background-color: #000;
}
#viewerScreen {
    display: table;
    height: 100%;
}

.viewerRows {
    display: table-row;
}
.viewerCells {
    display: table-cell;
    border: 1px solid #ddd; 
}

#canvasDiv {
    position: relative;
    margin: 10px;
}

#patientInfo {
    color: #fff;
    font-size: 0.8em;
    text-align: right;
    position: absolute;
    top: 5px;
    right: 5px;
}
#patientInfo ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
#studyInfo {
    color: #fff;
    font-size: 0.8em;
    text-align: left;
    position: absolute;
    top: 5px;
    left: 5px;
}
#studyInfo ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
canvas {
    cursor:default;
    display: block;
    margin: auto;
}

#toolbox {
    margin: 0;
    padding: 10px;
}
#toolbox div{
    float:left;
}
#matrixViewSelectBoxItText {
    padding-left:7px;
}
#singleButtons {
    margin-left: 3px;
}

#slider {
    width: 100%;
    margin: 10px 0 0 0;
    height: .6em;
}
#slider .ui-slider-handle {
    width: 1em;
    height: 1em;
}


#metaDialog {
    font-size: 0.8em;
}
#metaDialog table {
    overflow-y: scroll;
    overflow-x: auto;
}
#metaDialog thead {
    font-weight: bold;
}

.tree,.tree ul,.tree li {
    list-style:none; 
    margin:0; 
    padding:0; 
    zoom: 1;
}
.tree ul {
    margin-left:8px; 
}
.tree li a {
    color:#333; 
    padding:.1em 7px .1em 27px; 
    display:block; 
    text-decoration:none; 
    border:1px dashed #fff; 
    background:url(../img/icon-file.gif) 5px 50% no-repeat; 
}
.tree li a.tree-parent { 
    background:url(../img/icon-folder-open.gif) 5px 50% no-repeat; 
}
.tree li a.tree-parent-collapsed {
    background:url(../img/icon-folder.gif) 5px 50% no-repeat; 
}
.tree li a:hover,.tree li a.tree-parent:hover,.tree li a:focus,.tree li a.tree-parent:focus,.tree li a.tree-item-active { 
    border:1px solid #eee; 
    background-color:#fafafa;
    -webkit-border-radius:4px; 
    -moz-border-radius:4px; 
    -ms-border-radius:4px; 
    border-radius:4px; 
}
.tree li a:focus,.tree li a.tree-parent:focus,.tree li a.tree-item-active { 
    border:1px solid #e2f3fb;
    background-color:#f2fafd; 
}
.tree ul.tree-group-collapsed { 
    display:none; 
}

.progress.active .bar {
    -webkit-animation: progress-bar-stripes 2s linear infinite;
    -moz-animation: progress-bar-stripes 2s linear infinite;
    -ms-animation: progress-bar-stripes 2s linear infinite;
    -o-animation: progress-bar-stripes 2s linear infinite;
    animation: progress-bar-stripes 2s linear infinite;
}
.progress-striped .bar {
    background-color: #149bdf;
    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    -webkit-background-size: 40px 40px;
    -moz-background-size: 40px 40px;
    -o-background-size: 40px 40px;
    background-size: 40px 40px;
}

